[package]
name = "checkARB"
version = "0.1.0"
edition = "2021"
description = "A GUI tool for Qualcomm ARB (Anti-Rollback) analysis"

[dependencies]
eframe = "0.31"
egui = "0.31"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
sha2 = "0.10"
digest = "0.10"
egui_zhcn_fonts = "0.1.1"
